--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "build": "vue-cli-service build --openssl-legacy-provider build",
     "lint": "vue-cli-service lint"
   },
+  "engines": {
+    "node": ">=16.13.2"
+  },
   "dependencies": {
     "axios": "^1.4.0",
     "bootstrap-vue": "^2.23.1",
